# cs211

check/hw01/src/: circle.h  overlapped.c
check/hw01/test/: test_circle.c
check/hw02/src/: tr.c  translate.c
check/hw02/test/: test_translate.c
final_project/: CMakeLists.txt
final_project/.cs211/lib/catch/: CMakeLists.txt
final_project/src/: board.cxx  board.hxx  controller.cxx  controller.hxx  game_config.cxx  game_config.hxx  main.cxx  model.cxx  model.hxx  move.cxx  move.hxx  piece.cxx  piece.hxx  piece_set.cxx  piece_set.hxx  player.cxx  player.hxx  position_set.cxx  position_set.hxx  std_black.cxx  std_black.hxx  std_white.cxx  std_white.hxx  view.cxx  view.hxx
final_project/test/: model_test.cxx
hw01/: .gitignore  COLLABORATION.txt  Makefile
hw01/src/: #circle.c#  circle.c
hw02/: Makefile
hw02/src/: tr.c  translate.c  translate.h
hw02/test/: test_translate.c
hw03/: .gitignore  COLLABORATION.txt  Makefile
hw03/src/: #libvc.c#  count.c  libvc.c
hw03/test/: #test_vc.c#  test_vc.c
hw04/: .gitignore  Makefile  README.txt
hw04/Resources/: two_identical_ballots.in
hw04/rsrc/: ballot_5.in
hw04/src/: ballot.c  ballot.h  ballot_box.c  ballot_box.h  libvc.h
hw04/test/: test_ballot.c  test_ballot_box.c
hw06/: COLLABORATION.txt
hw06/.run/: helper_test.run.xml  model_test.run.xml  reversi.run.xml
hw06/src/: board.cxx  controller.cxx  controller.hxx  model.cxx  model.hxx  player.cxx  reversi.cxx  view.cxx  view.hxx
hw06/test/: model_test.cxx  move_test.cxx  position_set_test.cxx
